interpreter/examples/bad/type/bad_call.dl
// bad call of a funtion
{
    function f(
